# JournalistLLM

./: .gitignore  README.md  main.py  pyproject.toml
src/newsapi/: newsapi.ipynb
src/notebooks/: article_counts_bias.ipynb
