[project]
name = "journalistllm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "extruct>=0.18.0",
    "gnews>=0.4.2",
    "ipykernel>=6.30.1",
    "lxml-html-clean>=0.4.2",
    "matplotlib>=3.10.6",
    "newspaper3k>=0.2.8",
    "pandas>=2.3.2",
]

[tool.pytest.ini_options]
addopts = "-q --maxfail=1 --disable-warnings"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
]
